# kg-resume-filter

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
data/samples/: job.txt  resume.txt
src/kgrf/: __init__.py  config.py  db.py  models.py
src/kgrf/api/: app.py  schema.py
src/kgrf/ingestion/: extract_text.py  llm_extract.py  loader.py
src/kgrf/llm/: text2cypher.py
src/kgrf/ontology/: constraints.cypher  seed.py  skills_seed.json
src/kgrf/reasoning/: fit.py  queries.cypher
tests/: conftest.py  test_reasoning.py  test_text2cypher_guard.py
