[project]
name = "kgrf"
version = "0.1.0"
description = "Knowledge-graph-based resume filter with explainable, graph-driven reasoning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.20",
    "strawberry-graphql[fastapi]>=0.230",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "anthropic>=0.40",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kgrf"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
